objects/Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Initiatives</relationshipLabel>
        <relationshipName>Initiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <formula>CASE(TEXT(Status__c), 
  &apos;Green&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3F0&quot;, &quot;Green&quot;, 16, 16), 
  &apos;Amber&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3Ez&quot;, &quot;Amber&quot;, 16, 16), 
  &apos;Red&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000000d3F1&quot;, &quot;Red&quot;, 16, 16), 
  null
)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All_Compliance_Initatives</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Icon__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>mtiyam</value>
        </filters>
        <label>All Compliance Initiatives</label>
        <sharedTo>
            <group>Compliance</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Initatives</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Initatives</label>
    </listViews>
    <listViews>
        <fullName>Initiative_I_Manage</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Initiative I Manage</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Initiative_Follower__c</fullName>
        <label>Initiative Follower</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Initiative_Team_Member__c</fullName>
        <label>Initiative Team Member</label>
    </sharingReasons>
</CustomObject>